--- a/NdgrClientSharp.Protocol/NdgrClientSharp.Protocol.csproj
+++ b/NdgrClientSharp.Protocol/NdgrClientSharp.Protocol.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <RootNamespace>NdgrClientSharp.Protocol</RootNamespace>
+        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
