--- a/NdgrClientSharp/NdgrClientSharp.csproj
+++ b/NdgrClientSharp/NdgrClientSharp.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
         <Nullable>enable</Nullable>
         <Version>0.1.0</Version>
+        <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="HiNetCloud.Microsoft.Bcl.AsyncInterfaces" Version="24.8.10.9" />
       <PackageReference Include="R3" Version="1.2.*" />
     </ItemGroup>
 
