--- a/NdgrClientSharp.Protocol/NdgrClientSharp.Protocol.csproj
+++ b/NdgrClientSharp.Protocol/NdgrClientSharp.Protocol.csproj
@@ -5,6 +5,7 @@
         <RootNamespace>NdgrClientSharp.Protocol</RootNamespace>
         <TargetFrameworks>netstandard2.1;netstandard2.0</TargetFrameworks>
         <LangVersion>8</LangVersion>
+        <AssemblyVersion>0.1.0</AssemblyVersion>
     </PropertyGroup>
 
     <ItemGroup>
