--- a/NdgrClientSharp/NdgrClientSharp.csproj
+++ b/NdgrClientSharp/NdgrClientSharp.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="R3" Version="1.2.*"/>
+        <PackageReference Include="R3" Version="1.2.0"/>
     </ItemGroup>
     
 
